--- a/index.css
+++ b/index.css
@@ -1,6 +1,41 @@
 /**
     공통
 **/
+@charset "UTF-8";
+
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #1abc9c;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #1abc9c;
+  --secondary: #2c3e50;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+}
 
 * {
   box-sizing: border-box;
@@ -262,10 +297,6 @@ p {
 .current {
   color: #f06000;
 }
-/**
-    -----------------------------------------------------------------------------------------
-     헤더
-    **/
 
 .mainText {
   width: 100%;
@@ -510,15 +541,83 @@ section#portfolio .modal_content button {
 section#portfolio .modal_content button:hover {
   color: #e00a87;
 }
+section#portfolio .modal_content .modal_title {
+  font-size: 2rem;
+  line-height: 2rem;
+}
+/* 모달 제목 */
+section#portfolio .modal_content .modal_title .title {
+  font-family: IBMPlexSansKR-Regular;
+}
+.text-secondary {
+  color: #2c3e50 !important;
+}
+.text-uppercase {
+  text-transform: uppercase !important;
+}
+.mb-0,
+.my-0 {
+  margin-bottom: 10 !important;
+}
+/* 모달 내용 */
+.subject {
+  text-align: left;
+}
 
+.subject .subject-sharp {
+  list-style: "#";
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.subject .subject-check {
+  list-style: "✅";
+}
+
+.skill {
+  margin-top: 10px;
+  margin-right: 5px;
+  display: inline-block;
+  padding: 5px 8px;
+  text-align: center;
+  border-radius: 5px;
+  background-color: #50bb9c;
+  color: #fff;
+}
+
+.paragraph {
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+.gif {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+section#portfolio .modal_content .modal_title .content {
+  font-family: IBMPlexSansKR-Regular;
+  text-decoration: none;
+  border: 1px solid #000;
+  color: rgb(41, 41, 41);
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+section#portfolio .modal_content img {
+  width: 50%;
+  object-fit: cover;
+}
 section#portfolio .modal_content .weblink {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: #e6e6e650;
-  padding: 80px 15px 40px 15px;
   box-sizing: border-box;
   font-size: 65%;
   line-height: 1.5;
@@ -543,14 +642,9 @@ section#portfolio .modal_content .weblink a {
   margin-bottom: 20px;
 }
 section#portfolio .modal_content .weblink a:hover {
-  background-color: #e00a87;
-  border-color: #e00a87;
+  background-color: #1abc9c;
+  border-color: #1abc9c;
   color: #fff;
-}
-
-section#portfolio .modal_content img {
-  width: 100%;
-  margin-bottom: 100px;
 }
 
 section#portfolio .modal_overlay {
